--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -3,9 +3,8 @@ footer {
     height: 60px;
     width: 100%;
     bottom: 0;
-    position: absolute;
     border-top: 1px solid #CCCCCC;
-    position: fixed;
+    position: relative;
 }
 
 footer p {
