--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -6,16 +6,18 @@
     border-radius: 4px;
     display: flex;
     align-items: center;
-    text-align: center;
     position: relative;
 }
 
-.filters .locations .amenities h3 {
+.filters .locations h3,
+.filters .amenities h3 {
+    padding-left: 20%;
     font-weight: 600;
 }
 
-.filters .locations .amenities h4 {
-    margin: 10px;
+.filters .locations h4,
+.filters .amenities h4 {
+    padding-left: 20%;
     font-weight: 400;
     font-size: 14px;
 }
@@ -29,7 +31,6 @@
 
 .filters .amenities {
     height: 100%;
-    width: 25%;
     flex-basis: 25%;
     line-height: 10px;
 }
