--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -83,3 +83,48 @@
     text-align: justify;
     margin-top: -2%;
 }
+
+.places .amenities,
+.places .reviews {
+    margin-top: 40px;
+}
+
+.places .amenities h2,
+.places .reviews h2 {
+    padding-bottom: 10px;
+    text-align: left;
+    font-size: 16px;
+    border-bottom: #DDDDDD 1px solid;
+}
+
+.places .amenitis li {
+    list-style: none;
+    display: flexbox
+}
+
+.places .amenities .pets div {
+    background-image: url(../images/icon_pets.png);
+    background-repeat: no-repeat;
+    background-size: 30px 30px;
+    width: 25px;
+    height: 25px;
+    margin: 0px 24px 5px -13%;
+}
+
+.places .amenities .tv {
+    background-image: url(../images/icon_tv.png);
+    background-repeat: no-repeat;
+    background-size: 30px 30px;
+    width: 25px;
+    height: 25px;
+    margin: 0px 24px 5px -13%;
+}
+
+.places .amenities .wi-fi {
+    background-image: url(../images/icon_wifi.png);
+    background-repeat: no-repeat;
+    background-size: 30px 30px;
+    width: 25px;
+    height: 25px;
+    margin: 0px 24px 5px -13%;
+}
