--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,13 +1,13 @@
 footer {
     background-color: white;
-    height: 60px;
+    height: 70px;
     width: 100%;
     bottom: 0;
-    border-top: 1px solid #CCCCCC;
+    position: fixed;
     position: relative;
+    border-top: 1px solid #CCCCCC;
 }
 
 footer p {
     text-align: center;
-    vertical-align: center;
 }
