--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,8 +2,7 @@ header {
     background-color: white;
     background-image: url(../images/logo.png);
     background-repeat: no-repeat;
-    left: 20px;
     height: 70px;
-    width: 100%;
+    /* width: 110%; */
     border: 1px #CCCCCC solid;
 }
