--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -1,14 +1,18 @@
-.container .places {
+.container .places .places-name {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.places .places-name h1 {
+    font-size: 30px;
+    z-index: -1;
+}
+
+.container .places .place-article {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.container .places h1 {
-    font-size: 30px;
-    padding-left: 20px;
-    padding-top: 20px;
-    flex: 0 1 100%;
 }
 
 .container .places article {
@@ -18,13 +22,25 @@
     margin: 20px;
     border: 1px #FF5A5F solid;
     border-radius: 4px;
-    position: relative;
 }
 
 .places h2 {
     font-size: 30px;
     text-align: center;
     margin-top: 2%;
+}
+
+.places .article-details {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.article-details .article-name {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .places .price_by_night {
@@ -34,10 +50,10 @@
     width: 70px;
     height: 60px;
     font-size: 30px;
-    right: 10px;
-    top: 10px;
+    right: 0px;
     min-width: 60px;
     position: absolute;
+    margin: -10px -15px;
 }
 
 .places .price_by_night h2 {
@@ -97,34 +113,56 @@
     border-bottom: #DDDDDD 1px solid;
 }
 
-.places .amenitis li {
-    list-style: none;
-    display: flexbox
+.places ul {
+    padding: 0px;
 }
 
-.places .amenities .pets div {
+.places .pets,
+.tv,
+.wifi {
+    list-style-type: none;
+    margin-bottom: -5%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.places .amenities .images-pets {
     background-image: url(../images/icon_pets.png);
     background-repeat: no-repeat;
-    background-size: 30px 30px;
-    width: 25px;
-    height: 25px;
-    margin: 0px 24px 5px -13%;
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
+    margin: 2px 10px 5px 0;
 }
 
-.places .amenities .tv {
+.places .amenities .images-tv {
     background-image: url(../images/icon_tv.png);
     background-repeat: no-repeat;
-    background-size: 30px 30px;
-    width: 25px;
-    height: 25px;
-    margin: 0px 24px 5px -13%;
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
+    margin: 2px 10px 5px 0;
 }
 
-.places .amenities .wi-fi {
+.places .amenities .images-wifi {
     background-image: url(../images/icon_wifi.png);
     background-repeat: no-repeat;
-    background-size: 30px 30px;
-    width: 25px;
-    height: 25px;
-    margin: 0px 24px 5px -13%;
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
+    margin: 2px 10px 5px 0;
+}
+
+.places .reviews li {
+    list-style-type: none;
+}
+
+.places .reviews h3 {
+    font-size: 14px;
+}
+
+.places .reviews p {
+    font-size: 12px;
+    margin-top: -3%;
 }
