--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -5,8 +5,8 @@
     border: 1px #DDDDDD solid;
     border-radius: 4px;
     display: flex;
+    justify-content: start;
     align-items: center;
-    position: relative;
 }
 
 .filters .locations h3,
@@ -85,17 +85,22 @@
     visibility: visible;
 }
 
-.filters button {
+.filters .f_button {
+    width: 60%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.filters .s_button {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
-    width: 20%;
+    width: 40%;
     border-radius: 4px;
     border: none;
     margin-right: 30px;
     right: 20px;
-    position: absolute;
 }
 
 button:hover {
