--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,15 @@
 footer {
     background-color: white;
-    height: 70px;
+    height: 10%;
     width: 100%;
     bottom: 0;
-    border-top: 1px solid #CCCCCC;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border: 1px #CCCCCC solid;
+    position: absolute;
+    position: fixed;
+}
+
+p {
+    text-align: center;
+    vertical-align: center;
+    margin-top: 2.5%;
 }
