--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -6,6 +6,7 @@
     border-radius: 4px;
     display: flex;
     align-items: center;
+    padding: 0px;
 }
 
 .filters .locations h3,
@@ -44,6 +45,7 @@
     border: none;
     margin-right: 30px;
     right: 20px;
+    margin: 0px 100px;
 }
 
 button:hover {
