--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -29,13 +29,15 @@
     border-right: 1px #DDDDDD solid;
 }
 
-.filters .locations .popover {
+.filters .locations .popover,
+.filters .amenities .popover {
     visibility: hidden;
     width: 100%;
     background-color: #FAFAFA;
     border: solid 1px #DDDDDD;
-    border-radius: 4px;
-    margin-top: -4px;
+    border-radius: 0px 0px 4px 4px;
+    margin: -4px 0px 0px -1px;
+    z-index: 10;
 }
 
 .filters .locations .popover h2 {
@@ -61,14 +63,16 @@
     line-height: 10px;
 }
 
-.filters .amenities .popover {
+
+/* .filters .amenities .popover {
     visibility: hidden;
     width: 100%;
     background-color: #FAFAFA;
     border: solid 1px #DDDDDD;
-    border-radius: 4px;
+    border-radius: 0 0 4px 4px;
     margin-top: -4px;
 }
+ */
 
 .filters .amenities .popover ul {
     margin-top: 30px;
