--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -4,11 +4,23 @@
     justify-content: center;
 }
 
+.container .places .places-name {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.places .places-name h1 {
+    font-size: 30px;
+    z-index: -1;
+}
+
 .container .places h1 {
     font-size: 30px;
 }
 
 .container .places article {
+    z-index: -1;
     width: 390px;
     padding: 20px;
     margin: 20px;
